# cpp-project-boilerplate

./: CMakeLists.txt  README.md  autocommit.sh  main
.devcontainer/: devcontainer.json
src/: 210-class-dtor-demo.cpp  210-lab-16-soln.cpp  210-lab-17-soln.cpp  210-lab-18-soln.cpp  210-lab-19-soln.cpp  210-lab-20-soln.cpp  210-lab-21-soln.cpp  210-lab-22-soln.cpp  Goat.h  ansi.h  lab-6-solution.cpp  lab-7-sol  main.cpp  test.csv  test.tsv  thing.ans  trogdor.ans
tests/: test_main  test_main.cpp
